[package]
name = "procon-lib"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["atc-2020"]

atc-2020 = ["rust-142", "crates-atc-2020"]
aoj = ["rust-141"]
codeforces = ["rust-149"]
codingame = ["rust-138", "crates-codingame"]
library-checker = ["rust-147"]
yukicoder = ["rust-150"]

rust-131 = []
rust-138 = ["rust-131"]
rust-140 = ["rust-138"]
rust-141 = ["rust-140"]
rust-142 = ["rust-141"]
rust-147 = ["rust-142"]
rust-149 = ["rust-147"]
rust-150 = ["rust-149"]

crates-atc-2020 = [
    "num",
    "num-bigint",
    "num-complex",
    "num-integer",
    "num-iter",
    "num-rational",
    "num-traits",
    "num-derive",
    "ndarray",
    "nalgebra",
    "alga",
    "libm",
    "rand",
    "getrandom",
    "rand_chacha",
    "rand_core",
    "rand_hc",
    "rand_pcg",
    "rand_distr",
    "petgraph",
    "indexmap",
    "regex",
    "lazy_static",
    "ordered-float",
    "ascii",
    "permutohedron",
    "superslice",
    "itertools",
    "itertools-num",
    "maplit",
    "either",
    "im-rc",
    "fixedbitset",
    "proconio",
    "rustc-hash",
    "smallvec",
]
crates-codingame = [
    "chrono",
    "itertools",
    #"libc",
    "rand",
    "regex",
    "time",
]

[dependencies]
##############################################################################
# crates-atc-2020
##############################################################################
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update
num = { version = "=0.2.1", optional = true }
num-bigint = { version = "=0.2.6", optional = true }
num-complex = { version = "=0.2.4", optional = true }
num-integer = { version = "=0.1.42", optional = true }
num-iter = { version = "=0.1.40", optional = true }
num-rational = { version = "=0.2.4", optional = true }
num-traits = { version = "=0.2.11", optional = true }
num-derive = { version = "=0.3.0", optional = true }
ndarray = { version = "=0.13.0", optional = true }
nalgebra = { version = "=0.20.0", optional = true }
alga = { version = "=0.9.3", optional = true }
libm = { version = "=0.2.1", optional = true }
rand = { version = "=0.7.3", features = ["small_rng"], optional = true }
getrandom = { version = "=0.1.14", optional = true }
rand_chacha = { version = "=0.2.2", optional = true }
rand_core = { version = "=0.5.1", optional = true }
rand_hc = { version = "=0.2.0", optional = true }
rand_pcg = { version = "=0.2.1", optional = true }
rand_distr = { version = "=0.2.2", optional = true }
petgraph = { version = "=0.5.0", optional = true }
indexmap = { version = "=1.3.2", optional = true }
regex = { version = "=1.3.6", optional = true }
lazy_static = { version = "=1.4.0", optional = true }
ordered-float = { version = "=1.0.2", optional = true }
ascii = { version = "=1.0.0", optional = true }
permutohedron = { version = "=0.2.4", optional = true }
superslice = { version = "=1.0.0", optional = true }
itertools = { version = "=0.9.0", optional = true }
itertools-num = { version = "=0.1.3", optional = true }
maplit = { version = "=1.0.2", optional = true }
either = { version = "=1.5.3", optional = true }
im-rc = { version = "=14.3.0", optional = true }
fixedbitset = { version = "=0.2.0", optional = true }
proconio = { version = "=0.3.6", features = ["derive"], optional = true }
rustc-hash = { version = "=1.1.0", optional = true }
smallvec = { version = "=1.2.0", optional = true }

##############################################################################
# crates-codingame
##############################################################################
chrono = { version = "=0.4.9", optional = true }
#itertools = { version = "=0.8.0", optional = true }
#libc = { version = "=0.2.62", optional = true }
#rand = { version = "=0.7.2", optional = true }
#regex = { version = "=1.3.0", optional = true }
time = { version = "=0.1.42", optional = true }
